	  - When only having ONE domain/organization and this is also the top DN
	    (suffix), phpQLAdmin won't offer to change domain/organization values.
	    This because the domain/branch _isn't_ the domain/organization, but the
	    'ou' _below_ it. Describe the problem with this in the doc/README file.
	  - Note about not running PHP with 'error_reporting = E_ALL'.

phpQLAdmin 2.3.3 Release (Jul  9 2006)
	Bug fixes
	  - Account status time fixes from Aaron Collins.
	  - When giving a user admin access to branch, I forgot to add the user DN to
	    the ACI lists of all leafs below the branch he/she got access to.
	  - Fixing some parse errors in some of the include/attrib.*, host_modify.php files.
	  - Make sure that host_modify.php:$computer_results is a numbered array. It isn't
	    if there's only ONE computer object in the database...
	  - Some missing and faulty hidden input's in host_modify.php fixed.
	  - Some bugfixes for sudo_modify.php, include/pql_hostctrl.inc by Aaron Collins.
	    + Computer must be used in call to pql_add_sudo_role().
	    + Use 'dn' not 'user' in the select option.
	    + Include left-head.html.
	    + Fix some translations in include/pql_hostctrl.inc:pql_list_expand().
	    + The missing functions include/pql_write.inc:pql_add_computer() and 
	      include/pql_write.inc:pql_add_sudo_role() sent to me months ago, is now
	      added.
	  - If the last user from a host ACL is removed, LDAP throws an error. The
	    uniqueMember attribute (where the user is located) is REQUIRED so one can't
	    remove the last one.
	    + Retreive users and computers FIRST (before any action check)
	    + Count the number of uniqueMember attribute values in the specific computer
	      object. If the last, remove the object all together...
	  - Since users/computers is now retreived before add/delete/modification of 
	    a host ACL, we need to manually update the array so that displayed content
	    in the frame is correct.

	GUI layout changes